--- a/src/mainboard/google/gru/Kconfig
+++ b/src/mainboard/google/gru/Kconfig
@@ -30,6 +30,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select MAINBOARD_DO_NATIVE_VGA_INIT
 	select MAINBOARD_HAS_CHROMEOS
 	select MAINBOARD_HAS_NATIVE_VGA_INIT
+	select MAINBOARD_HAS_TPM2
 	select RAM_CODE_SUPPORT
 	select RTC
 	select SOC_ROCKCHIP_RK3399
@@ -40,7 +41,7 @@ config BOARD_SPECIFIC_OPTIONS
 config CHROMEOS
 	select CHROMEOS_VBNV_FLASH
 	select EC_SOFTWARE_SYNC
-	select VBOOT2_MOCK_SECDATA
+	select SPI_TPM
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
