--- a/src/mainboard/google/gru/Kconfig
+++ b/src/mainboard/google/gru/Kconfig
@@ -41,6 +41,7 @@ config MAINBOARD_DIR
 
 config MAINBOARD_PART_NUMBER
 	string
+	default "Kevin" if BOARD_GOOGLE_KEVIN
 	default "Gru"
 
 config MAINBOARD_VENDOR
