google/gale: Enable WinBond SPI flash support
BUG=chrome-os-partner:49249
TEST=Able to read content from SPI NOR, with boards having WinBond SPI Flash
BRANCH=none

Change-Id: I104a750aa6545264003cd785c347cb9354e59b5c
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Original-Commit-Id: b933c7eeb133201877596c39cf4b3c263aca5498
Original-Change-Id: Ida767dab3abe72def2388e5eeb41eeb575205528
Original-Signed-off-by: Varadarajan Narayanan <varada@codeaurora.org>
Original-Reviewed-on: https://chromium-review.googlesource.com/339872
Original-Reviewed-by: David Hendricks <dhendrix@chromium.org>
Reviewed-on: https://review.coreboot.org/14672
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/mainboard/google/gale/Kconfig
+++ b/src/mainboard/google/gale/Kconfig
@@ -28,6 +28,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select SPI_FLASH_GIGADEVICE
 	select SPI_FLASH_SPANSION
 	select SPI_FLASH_STMICRO
+	select SPI_FLASH_WINBOND
 	select DRIVERS_UART
 
 config CHROMEOS
