--- a/src/vendorcode/amd/agesa/common/Makefile.inc
+++ b/src/vendorcode/amd/agesa/common/Makefile.inc
@@ -27,6 +27,9 @@
 #
 #*****************************************************************************
 
+romstage-y += agesa-entry.c
+ramstage-y += agesa-entry.c
+
 libagesa-y += amdlib.c
 
 # Do not optimise performance-critical low-level IO for size with -Os,
