build system: rename fmap.h to fmap_config.h
There's an in-tree fmap.h, and the file generated by fmaptool is likely
used in tandem with it. To avoid problems, rename the generated file
(which so far isn't used).

Change-Id: I95dfde513a7f78677cf18ecd7ce8745e40af316b
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/14570
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -700,12 +700,12 @@ $(obj)/fmap.fmd: $(CONFIG_FMDFILE) $(obj)/config.h
 endif # ifeq ($(CONFIG_FMDFILE),)
 
 # generated at the same time as fmap.fmap
-$(obj)/fmap.h: $(obj)/fmap.fmap
+$(obj)/fmap_config.h: $(obj)/fmap.fmap
 $(obj)/fmap.desc: $(obj)/fmap.fmap
 
 $(obj)/fmap.fmap: $(obj)/fmap.fmd $(FMAPTOOL)
-	echo "    FMAP       $(FMAPTOOL) -h $(obj)/fmap.h $< $@"
-	$(FMAPTOOL) -h $(obj)/fmap.h -R $(obj)/fmap.desc $< $@
+	echo "    FMAP       $(FMAPTOOL) -h $(obj)/fmap_config.h $< $@"
+	$(FMAPTOOL) -h $(obj)/fmap_config.h -R $(obj)/fmap.desc $< $@
 
 $(obj)/coreboot.pre: $(objcbfs)/bootblock.bin $$(prebuilt-files) $(CBFSTOOL) $$(cpu_ucode_cbfs_file) $(obj)/fmap.fmap $(obj)/fmap.desc
 	$(CBFSTOOL) $@.tmp create -M $(obj)/fmap.fmap -r $(shell cat $(obj)/fmap.desc)
