dmp/vortex86ex: Merge northbridge and southbridge into soc
Change-Id: I16c04452d2d6c3205aea29fe8aa8fad8fc485a46
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-on: https://review.coreboot.org/14600
Tested-by: build bot (Jenkins)
Reviewed-by: Kyösti Mälkki <kyosti.malkki@gmail.com>

--- a/src/soc/dmp/vortex86ex/Makefile.inc
+++ b/src/soc/dmp/vortex86ex/Makefile.inc
@@ -13,7 +13,10 @@
 ## GNU General Public License for more details.
 ##
 
-ifeq ($(CONFIG_SOUTHBRIDGE_DMP_VORTEX86EX),y)
+ifeq ($(CONFIG_SOC_DMP_VORTEX86EX),y)
+
+ramstage-y += northbridge.c
+ramstage-y += xgi_oprom.c
 
 ramstage-y += southbridge.c
 ramstage-y += hard_reset.c
