--- a/src/soc/dmp/vortex86ex/Kconfig
+++ b/src/soc/dmp/vortex86ex/Kconfig
@@ -13,7 +13,8 @@
 ## GNU General Public License for more details.
 ##
 
-config SOUTHBRIDGE_DMP_VORTEX86EX
+config SOC_DMP_VORTEX86EX
 	bool
+	select LATE_CBMEM_INIT
 	select AZALIA_PLUGIN_SUPPORT
 	select HAVE_HARD_RESET
