--- a/src/soc/rdc/r8610/Kconfig
+++ b/src/soc/rdc/r8610/Kconfig
@@ -1,7 +1,7 @@
 ##
 ## This file is part of the coreboot project.
 ##
-## Copyright (C) 2007, 2009 Rudolf Marek <r.marek@assembler.cz>
+## Copyright (C) 2008-2009 coresystems GmbH
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -13,8 +13,16 @@
 ## GNU General Public License for more details.
 ##
 
-ifeq ($(CONFIG_SOUTHBRIDGE_RDC_R8610),y)
+config SOC_RDC_R8610
+	bool
+	select ARCH_BOOTBLOCK_X86_32
+	select ARCH_VERSTAGE_X86_32
+	select ARCH_ROMSTAGE_X86_32
+	select ARCH_RAMSTAGE_X86_32
+	select ROMCC
+	select LATE_CBMEM_INIT
 
-ramstage-y += r8610.c
-
-endif
+config BOOTBLOCK_SOUTHBRIDGE_INIT
+	string
+	default "soc/rdc/r8610/bootblock.c"
+	depends on SOC_RDC_R8610
