--- a/src/soc/rdc/r8610/Makefile.inc
+++ b/src/soc/rdc/r8610/Makefile.inc
@@ -1,11 +1,13 @@
 ##
 ## This file is part of the coreboot project.
 ##
-## Copyright (C) 2008-2009 coresystems GmbH
+## Copyright (C) 2007 Corey Osgood <corey.osgood@gmail.com>
+## Copyright (C) 2007, 2009 Rudolf Marek <r.marek@assembler.cz>
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
-## the Free Software Foundation; version 2 of the License.
+## the Free Software Foundation; either version 2 of the License, or
+## (at your option) any later version.
 ##
 ## This program is distributed in the hope that it will be useful,
 ## but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -13,10 +15,9 @@
 ## GNU General Public License for more details.
 ##
 
-config SOUTHBRIDGE_RDC_R8610
-	bool
+ifeq ($(CONFIG_SOC_RDC_R8610),y)
 
-config BOOTBLOCK_SOUTHBRIDGE_INIT
-	string
-	default "southbridge/rdc/r8610/bootblock.c"
-	depends on SOUTHBRIDGE_RDC_R8610
+ramstage-y += northbridge.c
+ramstage-y += r8610.c
+
+endif
