--- a/src/soc/intel/braswell/Kconfig
+++ b/src/soc/intel/braswell/Kconfig
@@ -21,6 +21,7 @@ config CPU_SPECIFIC_OPTIONS
 	select HAVE_HARD_RESET
 	select MMCONF_SUPPORT
 	select MMCONF_SUPPORT_DEFAULT
+	select NO_FIXED_XIP_ROM_SIZE
 	select RELOCATABLE_MODULES
 	select PARALLEL_MP
 	select PCIEXP_ASPM
