--- a/src/Kconfig
+++ b/src/Kconfig
@@ -262,6 +262,13 @@ config CACHE_RELOCATED_RAMSTAGE_OUTSIDE_CBMEM
 	 The relocated ramstage is saved in an area specified by the
 	 by the board and/or chipset.
 
+config NO_STAGE_CACHE
+	bool
+	default n
+	help
+	 Do not save any component in stage cache for resume path. On resume,
+	 all components would be read back from CBFS again.
+
 config FLASHMAP_OFFSET
 	hex "Flash Map Offset"
 	default 0x00670000 if NORTHBRIDGE_INTEL_SANDYBRIDGE
