--- a/src/soc/rockchip/rk3288/Kconfig
+++ b/src/soc/rockchip/rk3288/Kconfig
@@ -27,6 +27,7 @@ config SOC_ROCKCHIP_RK3288
 	select UNCOMPRESSED_RAMSTAGE
 	select GENERIC_GPIO_LIB
 	select RTC
+	select UART_OVERRIDE_REFCLK
 
 if SOC_ROCKCHIP_RK3288
 
