--- a/src/soc/rockchip/rk3399/Kconfig
+++ b/src/soc/rockchip/rk3399/Kconfig
@@ -12,6 +12,7 @@ config SOC_ROCKCHIP_RK3399
 	select GENERIC_UDELAY
 	select HAVE_MONOTONIC_TIMER
 	select UNCOMPRESSED_RAMSTAGE
+	select UART_OVERRIDE_REFCLK
 
 if SOC_ROCKCHIP_RK3399
 
