lib: remove FLASHMAP_OFFSET config variable
The FLASHMAP_OFFSET config variable is used in lib/fmap.c, however
the fmdtool creates a fmap_config.h with a FMAP_OFFSET #define.
Those 2 values are not consistent. Therefore, remove the Kconfig
variable and defer to the #define generated by fmdtool.

Change-Id: Ib4ecbc429e142b3e250106eea59fea1caa222917
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://review.coreboot.org/14765
Reviewed-by: Patrick Georgi <pgeorgi@google.com>
Tested-by: build bot (Jenkins)
Reviewed-by: Furquan Shaikh <furquan@google.com>
Reviewed-by: Leroy P Leahy <leroy.p.leahy@intel.com>

--- a/src/lib/Makefile.inc
+++ b/src/lib/Makefile.inc
@@ -186,6 +186,13 @@ $(call src-to-obj,smm,$(dir)/cbfs.c) : $(obj)/fmap_config.h
 $(call src-to-obj,verstage,$(dir)/cbfs.c) : $(obj)/fmap_config.h
 $(call src-to-obj,postcar,$(dir)/cbfs.c) : $(obj)/fmap_config.h
 
+$(call src-to-obj,bootblock,$(dir)/fmap.c) : $(obj)/fmap_config.h
+$(call src-to-obj,romstage,$(dir)/fmap.c) : $(obj)/fmap_config.h
+$(call src-to-obj,ramstage,$(dir)/fmap.c) : $(obj)/fmap_config.h
+$(call src-to-obj,smm,$(dir)/fmap.c) : $(obj)/fmap_config.h
+$(call src-to-obj,verstage,$(dir)/fmap.c) : $(obj)/fmap_config.h
+$(call src-to-obj,postcar,$(dir)/fmap.c) : $(obj)/fmap_config.h
+
 romstage-y += bootmode.c
 ramstage-y += bootmode.c
 verstage-y += bootmode.c
