qualcomm/ipq40xx: Don't annoy users with ambiguous questions
The code needs to know what kind of part the SoC is, but the question
was weirdly phrased and also exposed to the user (instead of being a
silent "select" to do in a board).

Change-Id: I0344c528d86ac047fc49ccff9e149865bbd4b481
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/14766
Reviewed-by: Martin Roth <martinroth@google.com>
Tested-by: build bot (Jenkins)

--- a/src/soc/qualcomm/ipq40xx/Kconfig
+++ b/src/soc/qualcomm/ipq40xx/Kconfig
@@ -19,8 +19,10 @@ config CHROMEOS
 	select RETURN_FROM_VERSTAGE
 
 config IPQ_QFN_PART
-	bool "Is the SoC a BGA part or QFN part"
+	bool
 	default n
+	help
+	  Is the SoC a QFN part (as opposed to a BGA part)
 
 config MBN_ENCAPSULATION
 	depends on USE_BLOBS
